# pmd_farc

./: Cargo.toml  roadmap.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: dehasher.rs  farc.rs  farc_file.rs  farc_writer.rs  file_name_index.rs  find_name.rs  lib.rs  main.rs  pgdb.rs
