[package]
name = "pmd_farc"
version = "0.2.0"
authors = ["marius851000 <mariusdavid@laposte.net>"]
edition = "2018"
description = "a library permitting to read FARC file, used in pokemon mystery dungeon on 3DS"
repository = "https://github.com/marius851000/pmd_farc"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
license = "CC0-1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
io_partition = "1.1.1"
pmd_sir0 = "1.2.1"
crc = "1.8.1"
binread = "1.4.1"
thiserror = "1.0.23"
byteorder = "1.4.2"